# leverage

./: .gitignore  ARCHITECTURE.md  LITERATE_CONVERSION.md  SETUP.md  flake.nix  index.md  litsconfig.json  package-lock.json  package.json  pyproject.toml  svelte.config.js  tsconfig.json  vite.config.ts
.github/workflows/: pages.yml
book/: README.md  toc.json
book/chapters/: 01-what-this-simulator-tests.md  02-how-to-read-the-interface.md  03-synthetic-xaw-proxy.md  04-price-distributions-total-return.md  05-prime-and-margin-rates.md  06-monthly-step.md  07-contributions-and-investment-target.md  08-board-lots-and-cash-balance.md  09-debt-equity-and-margin-leverage.md  10-interest-handling.md  11-heloc-cap-enforcement.md  12-tax-deduction-column.md  13-drawdown-to-margin-call.md  14-portfolio-path-chart.md  15-checkpoint-table.md  16-outcome-histograms.md  17-reading-bad-outcomes.md
book/components/: BookExamples.ts  InterestAccrualDemo.ts  book-examples.css  interest-accrual-demo.css
book/examples/: default-scenario.ts  examples.test.ts  interest-fixture.ts  interface-inventory.ts  market-fixture.ts  part3-market.ts
leverage_backtester/: __init__.py  data.py  portfolio.py  rates.py  simulator.py  tax.py
scripts/: prepare-pages.mjs  python_synthetic_xaw.py
src/lib/backtest/: bankOfCanada.ts  dcaSimulator.test.ts  dcaSimulator.ts  defaultScenario.ts  marketData.ts  xaw.test.ts  yahoo.ts
src/routes/: +page.server.ts  +page.svelte
tests/: test_scaffold.py
tests/fixtures/: market-history.json  market-overlap-2023.json
